# ATACNet

./: README.md
atac_networks/: Untitled.ipynb  ___build.py  big_setup.py  build.py  pyproject.toml
atac_networks/atac_networks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
atac_networks/atac_networks/pyquic/: pyquic.cpp
quic_graphlasso/: pyproject.toml
quic_graphlasso/quic_graphlasso/: inverse_covariance.py  test_our_version.ipynb
quic_graphlasso/quic_graphlasso/.ipynb_checkpoints/: quic_graph_lasso-checkpoint.py  test_our_version-Copy1-checkpoint.ipynb  test_our_version-checkpoint.ipynb
quic_graphlasso/quic_graphlasso/pyquic/: __init__.py  pyquic.cpp
test_notebooks/: Untitled.ipynb  installlation and data.ipynb  test.py  test_pyquic.ipynb
test_notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
