[tool.poetry]
name = "atac-networks"
version = "0.1.0"
description = ""
authors = ["r-trimbour <trimbour@edu.bio.ens.psl.eu>"]
readme = "README.md"
packages = [{include = "atac_networks"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
joblib = "^1.3.2"
scipy = "^1.11.2"
tqdm = "^4.66.1"
scikit-learn = "^1.3.1"
setuptools = "^68.2.2"


[tool.poetry.dev-dependencies]
flake8 = "*"
pydocstyle = "*"
mypy = "*"
pre-commit = "*"
isort = "*"
black = { version="*", allow-prereleases = true }
pytest = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
poetry2setup = "^1.1.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel", "numpy", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build] 
script = "build.py" 
generate-setup-file = true
